22 April 2010: Wouter
	- tag 1.4.4.
	- trunk contains 1.4.5 in development.

16 April 2010: Wouter
	- more portability defines for CMSG_SPACE, CMSG_ALIGN, CMSG_LEN.
	- tag 1.4.4rc1.

15 April 2010: Wouter
	- ECC-GOST algorithm number 12 that is assigned by IANA.  New test
	  example key and signatures for GOST.  GOST requires openssl-1.0.0.
	  GOST is still disabled by default.

9 April 2010: Wouter
	- Fix bug#305: pkt_dname_tolower could read beyond end of buffer or
	  get into an endless loop, if 0x20 was enabled, and buffers are small
	  or particular broken packets are received.
	- Fix chain of trust with CNAME at an intermediate step, for the DS
	  processing proof.

8 April 2010: Wouter
	- Fix validation of queries with wildcard names (*.example).

6 April 2010: Wouter
	- Fix EDNS probe for .de DNSSEC testbed failure, where the infra
	  cache timeout coincided with a server update, the current EDNS 
	  backoff is less sensitive, and does not cache the backoff unless 
	  the backoff actually works and the domain is not expecting DNSSEC.
	- GOST support with correct algorithm numbers.

1 April 2010: Wouter
	- iana portlist updated.

24 March 2010: Wouter
	- unbound control flushed items are not counted when flushed again.

23 March 2010: Wouter
	- iana portlist updated.

22 March 2010: Wouter
	- unbound-host disables use-syslog from config file so that the
	  config file for the main server can be used more easily.
	- fix bug#301: unbound-checkconf could not parse interface
	  '0.0.0.0@5353', even though unbound itself worked fine.

19 March 2010: Wouter
	- fix fwd_ancil test to pass if the socket options are not supported.

18 March 2010: Wouter
	- Fixed random numbers for port, interface and server selection.
	  Removed very small bias.
	- Refer to the listing in unbound-control man page in the extended
	  statistics entry in the unbound.conf man page.

16 March 2010: Wouter
	- Fix interface-automatic for OpenBSD: msg.controllen was too small,